--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: black;
+    background: url('../assets/img/concert.jpg') no-repeat center center fixed;
     background-size: cover;
     position: relative;
     overflow-x: hidden;
@@ -19,7 +19,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.74); /* Couleur semi-transparente */
+    background-color: rgba(0, 0, 0, 0.73); /* Couleur semi-transparente */
     z-index: -1;
     pointer-events: none; /* Permet de cliquer à travers le pseudo-élément */
 }
@@ -49,6 +49,10 @@ body::before {
 
 .menu-btn {
     position: absolute;
+    top: 0vw;
+    right: 5vw;
+    width: 3vw;
+    height: auto;
 }
 
 .menu-btn:hover {
@@ -58,7 +62,7 @@ body::before {
 
 .nav-links {
     background-color: transparent;
-    backdrop-filter: blur(40px);
+    backdrop-filter: blur(300px);
     position: absolute;
     padding: 100% 100%;
     text-align: center;
@@ -69,13 +73,13 @@ body::before {
     margin: 0;
     padding: 0;
     margin-bottom: 10rem;
-
 }
 
 .nav-links.active {
     display: block;
     z-index: 1000; /* Valeur pour le premier plan */
 }
+
 .nav-links a {
     display: block;
     text-decoration: none;
@@ -98,7 +102,7 @@ body::before {
 footer {
     background-color: transparent;
     border-top: 2px solid rgba(255,255,255, 0.2);
-    backdrop-filter: blur(20px);
+    backdrop-filter: blur(10px);
     color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
@@ -119,7 +123,7 @@ footer a {
 }
 
 footer a:hover {
-    color: #a1a1a1;
+    color: #fd0202;
     text-decoration: underline;
 }
 
@@ -129,10 +133,27 @@ main {
     margin: 5vw 5vw;
 }
 /*================================== Programmation ===============================*/
+
+
+.prog a{
+    text-decoration: none;
+    color: white;
+    backdrop-filter: blur(10px);
+
+}
+.prog a :hover{
+      background-color: rgb(255, 255, 255);
+  }
+
 a{
     text-decoration: none;
     color: white;
+
 }
+a:hover{
+    color: red;
+}
+
 
 .container{
     color: #ffffff;
@@ -144,17 +165,23 @@ a{
     backdrop-filter: blur(0px);
     overflow: hidden;
     text-decoration: none;
+    font-size: 25px;
 }
 
 .col:hover {
+    color: red;
     font-weight: bold;
     transform: scale(1.10);
     transition: transform 0.6s ease, box-shadow 0.3s ease;
 
 }
 
-.col img {
+.star{
     width: 100%;
+    height: auto;
+}
+.col img {
+    width: 90%;
     height: auto;
 }
 
@@ -167,6 +194,14 @@ a{
     padding-left: 0;
 }
 h1{
-    font-size: 6vw;
+    font-size: 4.5vw;
+}
+
+h2{
+    font-size: 4vw;
+}
+
+.presentation{
+    font-size: 20px;
 }
 /*================================== fin Programmation ===============================*/
