--- a/assets/style.css
+++ b/assets/style.css
@@ -72,7 +72,7 @@ body::before {
 .nav-links ul{
     margin: 0;
     padding: 0;
-    margin-bottom: 10rem;
+    margin-bottom: 5rem;
 }
 
 .nav-links.active {
@@ -159,18 +159,17 @@ a:hover{
     text-align: center;
     padding-right: 0;
     padding-left: 0;
-    margin-right: 0;
-    margin-left: 0;
+
 }
 
-.col {
+.col{
     backdrop-filter: blur(0px);
     overflow: hidden;
     text-decoration: none;
     font-size: 20px;
 }
 
-.col:hover {
+.colx:hover {
     color: red;
     font-weight: bold;
     transform: scale(1.10);
