--- a/assets/style.css
+++ b/assets/style.css
@@ -6,23 +6,13 @@
 }
 
 body {
-    background-color: black;
+    background-color: #6b747c;
     background-size: cover;
     position: relative;
     overflow-x: hidden;
 }
 
-body::before {
-    content: '';
-    position: fixed; /* Utiliser fixed pour couvrir toute la fenêtre */
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.73); /* Couleur semi-transparente */
-    z-index: -1;
-    pointer-events: none; /* Permet de cliquer à travers le pseudo-élément */
-}
+
 
 /* ============================== navbar ================================= */
 .navbar{
@@ -53,6 +43,7 @@ body::before {
     right: 5vw;
     width: 3vw;
     height: auto;
+    margin-top: 5vw;
 }
 
 .menu-btn:hover {
@@ -130,9 +121,7 @@ footer a:hover {
 
 /* =============================== fin footer ======================*/
 
-main {
-    margin-top : 5vw;
-}
+
 
 button:hover {
     background-color: white !important;
