--- a/assets/style.css
+++ b/assets/style.css
@@ -6,13 +6,19 @@
 }
 
 body {
-    background-color: #6b747c;
+    background-image: url("../assets/img/bg4.jpg");
     background-size: cover;
     position: relative;
     overflow-x: hidden;
 }
 
+.box{
+    background-color: rgba(74, 74, 74, 0.44);
+}
 
+.bouton{
+    background-color: rgba(74, 74, 74, 0.44);
+}
 
 /* ============================== navbar ================================= */
 .navbar{
@@ -199,6 +205,7 @@ a:hover{
     font-size: 20px;
 }
 /*================================== fin Programmation ===============================*/
-/*================================== infos ===============================*/
+/*================================== formulaire ===============================*/
 
-/*================================== fin infos ===============================*/
+
+/*================================== fin formulaire ===============================*/
