--- a/assets/style.css
+++ b/assets/style.css
@@ -5,8 +5,30 @@
     list-style: none;
 }
 
+.body-index{
+    background-image: url("img/wallpapper3.jpg");
+    background-size: cover;
+}
+
+.body-ticket{
+    background: linear-gradient(135deg, rgba(177, 177, 177, 0.63), rgba(255, 168, 7, 0.87));
+}
+
+.body-lineup{
+    background: linear-gradient(135deg, rgba(177, 177, 177, 0.63), rgba(34, 229, 255, 0.87));
+}
+
+.body-volunteer{
+    background: linear-gradient(135deg, rgba(177, 177, 177, 0.63), rgba(251, 103, 242, 0.75));
+}
+
+.body-info{
+    background: linear-gradient(135deg, rgba(177, 177, 177, 0.63), rgba(119, 255, 62, 0.92));
+}
+
+
+
 body {
-    background: linear-gradient(135deg, #1e2a47, #3a506b);
     color: white;
     font-family: Arial, sans-serif;
 }
@@ -30,7 +52,7 @@ input::placeholder {
 }
 
 button {
-    background: #5865f2;
+    background: rgba(227, 11, 11, 0.87);
     border: none;
     padding: 12px;
     border-radius: 8px;
@@ -41,11 +63,27 @@ button {
 }
 
 button:hover {
-    background: #4752c4;
+    background: rgba(152, 152, 152, 0.28);
     transform: scale(1.10);
     transition: transform 0.6s ease, box-shadow 0.3s ease;
 }
 
+.t:hover{
+    background: rgba(255, 168, 7, 0.87);
+}
+
+.d:hover{
+    background: rgba(34, 229, 255, 0.87);
+}
+
+.b:hover{
+    background: rgba(251, 103, 242, 0.75);
+}
+
+.g:hover{
+    background: rgba(119, 255, 62, 0.92);
+
+}
 @media (min-width: 1200px) { /* Écrans larges (PC grand écran) */
     main {
         margin-left: 150px !important;
@@ -55,14 +93,7 @@ button:hover {
     }
 }
 
-@media (min-width: 768px) and (max-width: 1199px) { /* Écrans moyens (tablettes, laptops) */
-    main {
-        margin-left: 70px !important;
-        margin-right: 70px !important;
-        margin-bottom: 70px !important;
-    }
 
-}
 
 
 @media (max-width: 767px) { /* Petits écrans (smartphones) */
@@ -79,7 +110,23 @@ button:hover {
     }
 }
 
+#timer {
+    font-size: 70px;
+    font-weight: bold;
+}
 
+.titre{
+    font-size: 100px;
+    font-weight: bold;
+}
+
+.date{
+    font-size: 40px;
+}
+
+.palestine{
+    font-size: 40px;
+}
 /* ============================== navbar ================================= */
 .navbar{
     position: fixed;
@@ -150,7 +197,7 @@ button:hover {
 }
 
 .nav-links a:hover {
-    color: rgba(0, 72, 255, 0.87);
+    color: rgb(109, 220, 255);
     transform: scale(1.05);
     -webkit-text-stroke: 1.5px #ffffff;
 
@@ -182,7 +229,7 @@ footer a {
 }
 
 footer a:hover {
-    color: rgba(14, 90, 253, 0.57);
+    color: rgba(255, 0, 0, 0.87);
     text-decoration: underline;
 
 }
@@ -234,14 +281,13 @@ a{
 .col img {
     width: 90%;
     height: auto;
-    border: 2px solid #4752c4;
 }
 
 .col img:hover {
-    border: 5px solid #404cc8;
+    border: 3px solid rgba(255, 0, 0, 0.87);
 }
 
-.col h2 {
+.col h3 {
     padding: 25px 10px;
 }
 
